# movies-search

./: CMakeLists.txt  CardButton.qml  Favorites.qml  InfoModal.qml  Main.qml  MovieCard.qml  MoviesPage.qml  Notifications.qml  SearchPage.qml  images.qrc  main.cpp  moviesfilter.cpp  moviesfilter.h  movieslistmodel.cpp  movieslistmodel.h  moviesmanager.cpp  moviesmanager.h
components/: CardButton.qml  InfoModal.qml  MenuButton.qml  MovieCard.qml  Notifications.qml  SearchBar.qml
pages/: Favorites.qml  MoviesPage.qml
src/: movieslistmodel.cpp  movieslistmodel.h  moviesmanager.cpp  moviesmanager.h
